name:           symbol
version:        0.2.4
cabal-version:  >= 1.10
license:        BSD3
license-file:   LICENSE
copyright:      (c) 2006-2011 Harvard University
                (c) 2011-2017 Geoffrey Mainland
author:         Geoffrey Mainland <mainland@drexel.edu>
maintainer:     Geoffrey Mainland <mainland@drexel.edu>
stability:      alpha
homepage:       https://github.com/mainland/symbol
category:       Data
synopsis:       A 'Symbol' type for fast symbol comparison.
description:    Provides a 'Symbol' data type allowing fast symbol comparisons
                and functions for interning symbols and recovering their
                'String' representation.

build-type:     Simple

tested-with:
  GHC == 9.10.1
  GHC == 9.8.2
  GHC == 9.6.5
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

library
  exposed-modules:
    Data.Symbol
    Data.Symbol.Unsafe

  build-depends:
    base       >= 4   && < 5,
    containers >= 0.2 && < 0.8,
    deepseq    >= 1.0 && < 2

  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/mainland/symbol.git
